# odesli-rs

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
lib/: Cargo.toml  README.md
lib/src/: api_result.rs  consts.rs  entity_type.rs  errors.rs  platforms.rs
nix/: flake.nix
nix/pkgs/: odesli.nix
src/: api_result.rs  client.rs  entity_type.rs  errors.rs  lib.rs  platforms.rs
