[package]
name = "odesli-rs"
version = "5.0.0"
edition = "2021"
authors = ["Akshett Rai Jindal"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Propheci/odesli-rs"
description = "Unofficial library to communicate with Odesli API in an async manner"
keywords = ["odesli", "music"]
categories = ["api-bindings"]

[dependencies]
reqwest = { version = "0.11.22", features = ["gzip", "json", "deflate"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
strum = { version = "0.25.0", features = ["derive"] }
